# shlex

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  lexer.mll  parser.mly  shlex.ml  shlex.pc.in
ocaml/: Makefile  lexer.mll  shlex.ml
src/: .gitignore  Makefile.am  main.cc  shlex.cc  shlex.h  shlex.hpp  shlex.l  shlex.y
src/yacc/: shlex.y
tests/: run_tests.sh
tests/in/: in01.txt  in02.txt  in03.txt  in04.txt  in05.txt
